<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="accessible.com.accessslope.MeasureSlopeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/azimuthLabel"
        android:id="@+id/azimuth"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pitchLabel"
        android:id="@+id/pitch"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/azimuth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rollLabel"
        android:id="@+id/roll"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/pitch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measureButtonLabel"
        android:id="@+id/measureSlopeLevel"
        android:onClick="measureSlope"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_below="@+id/roll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"/>

</RelativeLayout>
