<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="accessible.com.accessslope.ShowMeasurementResult">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resultAzimuthTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Azimuth"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/resultPitchTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/resultAzimuthTextField"
                android:layout_marginTop="20dp"
                android:text="Pitch"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/resultRollTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/resultPitchTextField"
                android:layout_marginTop="20dp"
                android:text="Roll"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/saveResultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resultRollTextField"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="71dp"
                android:onClick="saveResult"
                android:text="@string/saveResultButton"
                android:textSize="@dimen/abc_text_size_large_material"/>

            <Button
                android:id="@+id/tryAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/saveResultButton"
                android:layout_marginTop="40dp"
                android:onClick="openParentActivity"
                android:text="@string/tryAgainButtonLabel"
                android:textSize="@dimen/abc_text_size_large_material"/>

            <Button
                android:id="@+id/shareResultsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/saveResultButton"
                android:layout_marginTop="40dp"
                android:onClick="shareResultsAction"
                android:text="@string/shareResultsButtonLabel"
                android:textSize="@dimen/abc_text_size_large_material"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
